--- a/style.css
+++ b/style.css
@@ -1,18 +1,34 @@
 body{
 	background-color: black;
+	color: white;
+	width: 98%;
 }
 
 #official-Header-title {
-	font-size: 15vh;
+	font-size: 9vw;
 	font-family: monospace;
-	background-color: black;
-	color: white;
 	text-decoration: none;
-	height: 100vh;
+	height: 50vh;
+	color: purple;
+	margin: 2vw;
+	z-index: 1000;
+}
+#official-Header-title sup{color: white;font-size: 3vh;}
+
+.content {
+  padding: 16px;
 }
 
-#official-Header-title sup{
-	font-size: 3vh;
+/* The sticky class is added to the header with JS when it reaches its scroll position */
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
+.sticky + .content {
+  padding-top: 102px;
 }
 
 #headerMain-1 {
@@ -26,6 +42,7 @@ body{
 	width: 100%;
 	height: 60vh;
 	box-shadow: 0 2px 10px 5px rgba(255, 255, 255, 0.1);
+	opacity: 0.3;
 }
 
 #headerMain-1 a{
@@ -35,8 +52,10 @@ body{
 	text-align: right;
 	font-size: 4vw;
 	height: 15vh;
+	width: 30vw;
 	border: none;
-	color: azure;
+	color: 	#D8BFD8;
+	text-decoration: none;
 }
 
 #headerMain-1 a:Hover{
@@ -48,4 +67,28 @@ body{
 	box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.5);
 	background-color: white;
 	color: black;
+}
+
+p{
+	color: #C0C0C0;
+	font-size: 4vh;
+	font-family: San-Serif;
+	text-align:center;
+}
+
+#customer-review{
+	display: flex;	
+}
+
+#customer-review a{
+	font-family: helvetica;
+	font-size: 2vw;
+	width: 30%;
+	margin:3vw;
+	height: 55vh;
+	color: white;
+}
+
+span{
+	text-align:center;
 }
