--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ p{
 
 #official-Header-title {
 	font-size: 9vw;
-	font-family: apricot;
+	font-family: cursive;
 	text-decoration: none;
 	height: 50vh;
 	color: purple;
