--- a/style.css
+++ b/style.css
@@ -1,92 +1,83 @@
 body{
-	background-color: black;
-	color: white;
-	width: 98%;
-}
-p{
-	color: #C0C0C0;
-	font-size: 4vh;
-	font-family: San-Serif;
-	text-align:center;
+	margin: 0;
+	overflow: hidden;
 }
 
-#official-Header-title {
-	font-size: 9vw;
-	font-family: cursive;
-	text-decoration: none;
-	height: 50vh;
-	color: purple;
-	margin: 2vw;
-	z-index: 1000;
-}
-#official-Header-title sup{color: white;font-size: 3vh;}
+header {display:flex;width:100%; background-color: #fffefa;box-shadow: 0px 1px, 0px 0px white; font-family: cursive;text-decoration:none;}
 
-#headerMain-1 {
+header img{width: 5%;height:9vh;padding-top:5px;}
+
+header #title{padding: 10px;width:20%; font-size:5vh;}
+
+header span sup{font-size:2vh;}
+
+header input{font-size:3vh;width:35%;height:20%;margin:1%;border-radius:8px;}
+
+header a{font-size:3vh;padding: 10px;width:10%;cursor: pointer;margin:2px;}
+
+header a:Hover{font-size:4vh;border: 1px solid gray;}
+
+#main_lay{
+	width:100%;
 	display: flex;
-	font-family: monospace;
 }
 
-#headerMain-left {width: 70%} #headerMain-right {width:30%}
-
-#headerMain-1 img {
-	width: 100%;
-	height: 60vh;
-	box-shadow: 0 2px 10px 5px rgba(255, 255, 255, 0.1);
-	opacity: 0.3;
+#still_1 {
+	background-color: #f0f0f0;
+	width:20%;
+	height: 80vh;
+	padding: 1vw;
+	border-radius: 10px;
+	margin:2px;
+	opacity:0.3; 
 }
 
-#headerMain-1 a{
-	cursor: pointer;
-	display: block;
-	width: 100%;
-	text-align: right;
-	font-size: 4vw;
-	height: 15vh;
-	width: 30vw;
-	border: none;
-	color: 	#D8BFD8;
-	text-decoration: none;
+#still_1 section{
+	display: block; 
+	height:96%;
+	box-shadow:1px 1px 1px 1px darkgray;
+	margin:5px;
+	border-radius: 5px;
 }
 
-#headerMain-1 a:Hover{
-	display: block;
-	width: 100%;
-	text-align: right;
-	font-size: 5vw;
-	border: 1px solid white;
-	box-shadow: 0 2px 2px 0px rgba(0, 0, 0, 0.5);
-	background-color: white;
-	color: black;
+#move_1{
+	background-color: #f7f7f5;
+	width:60%;
+	height:85vh;
+	overflow: scroll;
+	margin:5px;
+	overflow-x: hidden;
+	padding:2%;
+}
+
+#main_1 section{	
+	display: block; 
+	height:48%;
+	box-shadow:1px 1px 1px 1px darkgray;
+	margin:5px;
+	border-radius: 5px;
+}
+
+::-webkit-Scrollbar{width:4px;}
+::-webkit-scrollbar-track {box-shadow: inset 0 0 5px white;border-radius: 4px;}
+::-webkit-scrollbar-thumb {background: grey;border-radius: 4px;}
+
+#still_2 {
+	background-color: #f0f0f0;
+	width:20%;
+	height: 80vh;
+	padding: 1vw;
+	border-radius: 10px;
+	margin:2px;
+	opacity:0.3;
+}
+
+#still_2 section{
+	display: block; 
+	height:48%;
+	box-shadow:1px 1px 1px 1px darkgray;
+	margin:5px;
+	border-radius: 5px;
 }
 
 
-
-#customer-review{
-	display: flex;	
-}
-
-#customer-review a{
-	font-family: helvetica;
-	font-size: 2vw;
-	width: 30%;
-	margin:3vw;
-	height: 55vh;
-	color: white;
-}
-
-
-.content {
-  padding: 16px;
-}
-
-/* The sticky class is added to the header with JS when it reaches its scroll position */
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the header gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-  padding-top: 102px;
-}
