--- a/style.css
+++ b/style.css
@@ -1,35 +1,30 @@
-body{
-	margin: 0;
-	overflow: hidden;
-}
+body{margin: 0;overflow: hidden;}
 
-header {display:flex;width:100%; background-color: #fffefa;box-shadow: 0px 1px, 0px 0px white; font-family: cursive;text-decoration:none;}
+header {display:flex;width:100%; background-color: #fffefa;box-shadow: 0px 1px, 1px 0px white; font-family: cursive;text-decoration:none;}
 
-header img{width: 5%;height:9vh;padding-top:5px;}
+header div{width:50%;}
 
-header #title{padding: 10px;width:20%; font-size:5vh;}
+header #title{width:30%; font-size:5vh;padding-left:1vw;}
 
-header span sup{font-size:2vh;}
+#menu {display:flex;}
 
-header input{font-size:3vh;width:35%;height:20%;margin:1%;border-radius:8px;}
+#tentative_section{display:none}
 
-header a{font-size:3vh;padding: 10px;width:10%;cursor: pointer;margin:2px;}
+header div span i{font-size:2vh;padding-left:2vw;padding-right:1vw;;border:1px solid red;}
 
-header a:Hover{font-size:4vh;border: 1px solid gray;}
+header div a{font-size:3vh;padding: 10px;width:20%;cursor: pointer;margin:2px;}
 
-#main_lay{
-	width:100%;
-	display: flex;
-}
+header div a:Hover{border: 1px solid gray;}
+
+#main_lay{width:100%;display: flex;}
 
 #still_1 {
-	background-color: #f0f0f0;
+	background-color: white;
 	width:20%;
 	height: 80vh;
 	padding: 1vw;
+	margin-top: 1px;
 	border-radius: 10px;
-	margin:2px;
-	opacity:0.3; 
 }
 
 #still_1 section{
@@ -38,6 +33,7 @@ header a:Hover{font-size:4vh;border: 1px solid gray;}
 	box-shadow:1px 1px 1px 1px darkgray;
 	margin:5px;
 	border-radius: 5px;
+	padding-top:5px;
 }
 
 #move_1{
@@ -60,24 +56,53 @@ header a:Hover{font-size:4vh;border: 1px solid gray;}
 
 ::-webkit-Scrollbar{width:4px;}
 ::-webkit-scrollbar-track {box-shadow: inset 0 0 5px white;border-radius: 4px;}
-::-webkit-scrollbar-thumb {background: grey;border-radius: 4px;}
+::-webkit-scrollbar-thumb {background: azure;border-radius: 4px;border:1px solid grey}
 
 #still_2 {
-	background-color: #f0f0f0;
+	background-color: white;
 	width:20%;
 	height: 80vh;
 	padding: 1vw;
+	margin-top: 1px;
 	border-radius: 10px;
-	margin:2px;
-	opacity:0.3;
 }
 
 #still_2 section{
 	display: block; 
-	height:48%;
+	height:96%;
 	box-shadow:1px 1px 1px 1px darkgray;
 	margin:5px;
 	border-radius: 5px;
 }
 
+#notify{
+	right:0;
+	bottom:0;
+	position:absolute;
+	width:30%;height:100%;
+	background-color: #fffefa;
+	box-shadow: 0px 2px 3px 2px black;
+	border-radius: 5px;
+}
 
+#notify header a{width:1vw;padding: 2px;cursor:pointer}
+
+@media screen and (max-width: 600px) {
+	
+	#main_header{height:25vh;}
+	
+	#menu{display:block;}
+	#menu a{display:block;width:100%;font-size:3vw}
+	#title{font-size:3vw;}
+	
+	#tentative_section{display:block}
+	#tentative_section a{display:block;width:100%;font-size:3vw;padding: 10px;cursor: pointer;margin:2px;}
+	
+	#breadcrumbs{display:block;font-size:5vh;width:10%; text-align:center}
+	#breadcrumbs:Hover{border:1px solid gray;}
+	
+	#still_1, #still_2{display:none;}
+	#move_1{margin:1px;width:100%;justify:center;}
+	#notify {width:70%}
+	#notify a{font-size: 3vh;}
+}
